Phase 5 completed